# django_my_project

./: .gitignore  README.md  catalog.json  db.sqlite3  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_is_published.py  0003_alter_blog_is_published_alter_blog_slug.py  0004_alter_blog_slug.py  0005_alter_blog_slug.py  0006_alter_blog_slug.py  0007_alter_blog_slug.py  0008_alter_blog_view_counter.py  0009_alter_blog_content_alter_blog_image_alter_blog_slug_and_more.py  0010_blog_owner.py
blog/templates/blog/: blog_confirm_delete.html  (+3 more)
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_remove_product_manufactured_at.py  0004_product_manufactured_at.py  0005_remove_product_manufactured_at.py  0006_remove_product_photo_product_image_and_more.py  0007_rename_photo_product_image_product_view_counter.py  0008_alter_product_view_counter.py  0009_rename_photo_product_image_and_more.py  0010_remove_product_photo_product_image.py  0011_alter_product_category_alter_product_description_and_more.py  0012_alter_category_category_alter_category_created_at_and_more.py  0013_product_is_published_product_view_counter.py  0014_product_slug.py  0015_version.py  0016_alter_version_is_current.py  0017_product_owner.py
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_user_country.py
users/templates/: login.html
(+15 files in other folders)
